wip on sync between view and postgres

--- a/menu_builder_dialog_base.ui
+++ b/menu_builder_dialog_base.ui
@@ -81,7 +81,7 @@
     </rect>
    </property>
    <property name="editable">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_profile">
