--- a/menu_builder_dialog_base.ui
+++ b/menu_builder_dialog_base.ui
@@ -123,6 +123,19 @@
     <string>Add a menu</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="button_delete_profile">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>100</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
