wip on adding menu to qgis menu bar

--- a/resources.qrc
+++ b/resources.qrc
@@ -11,5 +11,8 @@
     <qresource prefix="/plugins/MenuBuilder" >
         <file>resources/delete.svg</file>
     </qresource>
+    <qresource prefix="/plugins/MenuBuilder" >
+        <file>resources/settings.svg</file>
+    </qresource>
 </RCC>
 
